# fltk-schnapsen

./: CMakeLists.txt  Card.cxx  Card.h  CardImage.cxx  CardImage.h  Cards.cxx  Cards.h  Deck.cxx  Deck.h  Engine.cxx  Engine.h  Makefile  README.md  Rect.h  UI.h  Unittest.cxx  Util.cxx  Util.h  Welcome.cxx  debug.h  engine.cxx  engine.h  fltk-schnapsen.cxx  install.sh  messages.h  mingw.sh  welcome.cxx  welcome.h
include/: Alert.h  AnimText.h  Args.h  Card.h  CardImage.h  Cards.h  Deck.h  Engine.h  FontLoader.h  GameBook.h  Rect.h  Selector.h  UI.h  Unittest.h  Util.h  Welcome.h  debug.h  messages.h  system.h  win32_console.h
rsc/: fltk-schnapsen.desktop  install.sh  sayings_de.txt  sayings_en.txt  welcomes_de.txt
src/: Alert.cxx  AnimText.cxx  Args.cxx  Card.cxx  CardImage.cxx  Cards.cxx  Deck.cxx  Deck_Cmd.cxx  Engine.cxx  FontLoader.cxx  GameBook.cxx  Selector.cxx  Unittest.cxx  Util.cxx  Welcome.cxx
svg_cards/English_pattern/: R
